no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 9cf37c2e2d66a2cbe06d94aad68079f20b4bb287

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-de/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-de/strings.xml
@@ -4175,13 +4175,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4236,6 +4252,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4253,6 +4285,41 @@ dieser
 Erweiterung
 fehlgeschlagen
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Erweiterung
+kann
+nicht
+installiert
+werden
 <
 /
 string
@@ -4623,6 +4690,63 @@ nicht
 unterst
 tzt
 wird
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+verletzt
+Mozillas
+Richtlinien
+und
+kann
+nicht
+installiert
+werden
 .
 <
 /
@@ -5657,6 +5781,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Details
+ansehen
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5712,6 +5871,134 @@ Stabilit
 tsgr
 nden
 deaktiviert
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Diese
+Erweiterung
+verst
+t
+gegen
+Mozillas
+Richtlinien
+und
+wurde
+deaktiviert
+.
+Sie
+k
+nnen
+es
+aktivieren
+aber
+dies
+kann
+riskant
+sein
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Diese
+Erweiterung
+verst
+t
+gegen
+Mozillas
+Richtlinien
+.
+Es
+kann
+riskant
+sein
 .
 <
 /
