--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-dsb/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-dsb/strings.xml
@@ -4378,13 +4378,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4439,6 +4455,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4460,6 +4492,42 @@ se
 instal
 rowa
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Roz
+yrjenje
+njedajo
+se
+instal
+rowa
 <
 /
 string
@@ -4839,6 +4907,71 @@ platforma
 njep
 dp
 ra
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+se
+p
+e
+iwo
+p
+awid
+am
+Mozilla
+p
+ej
+o
+a
+njedajo
+se
+instal
+rowa
 .
 <
 /
@@ -5910,6 +6043,42 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Glej
+o
+drobnostki
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5967,6 +6136,155 @@ stabilnos
 i
 znjem
 ni
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+To
+to
+roz
+yrjenje
+se
+p
+e
+iwo
+p
+awid
+am
+Mozilla
+p
+ej
+o
+a
+jo
+se
+znjem
+ni
+o
+.
+M
+o
+o
+jo
+zm
+ni
+ale
+to
+jo
+sna
+riskantne
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+To
+to
+roz
+yrjenje
+se
+p
+e
+iwo
+p
+awid
+am
+Mozilla
+p
+ej
+o
+.
+Jo
+riskantne
+jo
+wu
+ywa
 .
 <
 /
