--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-es-rAR/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-es-rAR/strings.xml
@@ -4216,13 +4216,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4278,6 +4294,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4297,6 +4329,43 @@ esta
 extensi
 n
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+No
+se
+puede
+instalar
+la
+extensi
+n
 <
 /
 string
@@ -5711,6 +5780,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Ver
+detalles
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5767,6 +5871,135 @@ de
 seguridad
 o
 estabilidad
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Esta
+extensi
+n
+viola
+las
+pol
+ticas
+de
+Mozilla
+y
+ha
+sido
+desactivada
+.
+Puede
+habilitarlo
+pero
+puede
+ser
+riesgoso
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Esta
+extensi
+n
+viola
+las
+pol
+ticas
+de
+Mozilla
+.
+Usarlo
+puede
+ser
+riesgoso
 .
 <
 /
