--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-gl/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-gl/strings.xml
@@ -4248,13 +4248,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4310,6 +4326,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4331,6 +4363,43 @@ esta
 extensi
 n
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Non
+se
+pode
+instalar
+a
+extensi
+n
 <
 /
 string
@@ -4700,6 +4769,66 @@ se
 admiten
 nesta
 plataforma
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+infrinxe
+as
+pol
+ticas
+de
+Mozilla
+e
+non
+se
+pode
+instalar
 .
 <
 /
@@ -5742,6 +5871,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Ver
+detalles
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5797,6 +5961,134 @@ de
 estabilidade
 ou
 seguranza
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Esta
+extensi
+n
+infrinxe
+as
+pol
+ticas
+de
+Mozilla
+e
+desactivouse
+.
+Podes
+activalo
+pero
+isto
+pode
+ser
+arriscado
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Esta
+extensi
+n
+infrinxe
+as
+pol
+ticas
+de
+Mozilla
+.
+Usalo
+pode
+ser
+arriscado
 .
 <
 /
