--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-hsb/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-hsb/strings.xml
@@ -4317,13 +4317,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4377,6 +4393,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4396,6 +4428,41 @@ njeda
 so
 instalowa
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Roz
+rjenje
+njeda
+so
+instalowa
 <
 /
 string
@@ -4761,6 +4828,70 @@ tuta
 platforma
 njepodp
 ruje
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+so
+p
+e
+iwo
+prawid
+am
+Mozilla
+p
+e
+d
+e
+a
+njeda
+so
+instalowa
 .
 <
 /
@@ -5817,6 +5948,43 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Hlej
+e
+podrobnos
+e
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5874,6 +6042,153 @@ stabilnos
 e
 znjem
 ni
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Tute
+roz
+rjenje
+so
+p
+e
+iwo
+prawid
+am
+Mozilla
+p
+e
+d
+e
+a
+je
+so
+znjem
+ni
+o
+.
+M
+e
+e
+jo
+zm
+ni
+ale
+to
+je
+snano
+riskantne
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Tute
+roz
+rjenje
+so
+p
+e
+iwo
+prawid
+am
+Mozilla
+p
+e
+d
+e
+.
+Je
+riskantne
+jo
+wu
+iwa
 .
 <
 /
