--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-pt-rPT/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-pt-rPT/strings.xml
@@ -4251,13 +4251,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4313,6 +4329,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4333,6 +4365,44 @@ extens
 o
 falhou
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+N
+o
+poss
+vel
+instalar
+a
+extens
+o
 <
 /
 string
@@ -4724,6 +4794,67 @@ o
 suportado
 nesta
 plataforma
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+viola
+as
+pol
+ticas
+da
+Mozilla
+e
+n
+o
+pode
+ser
+instalado
 .
 <
 /
@@ -5772,6 +5903,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Ver
+detalhes
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5828,6 +5994,140 @@ seguran
 a
 ou
 estabilidade
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Esta
+extens
+o
+viola
+as
+pol
+ticas
+da
+Mozilla
+e
+foi
+desativada
+.
+Pode
+ativ
+-
+lo
+mas
+isto
+pode
+ser
+perigoso
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Esta
+extens
+o
+viola
+as
+pol
+ticas
+da
+Mozilla
+.
+A
+sua
+utiliza
+o
+pode
+ser
+perigosa
 .
 <
 /
