--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-sv-rSE/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-sv-rSE/strings.xml
@@ -4227,13 +4227,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4289,6 +4305,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4309,6 +4341,44 @@ installera
 till
 gget
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Det
+g
+r
+inte
+att
+installera
+till
+gget
 <
 /
 string
@@ -4679,6 +4749,63 @@ den
 h
 r
 plattformen
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+bryter
+mot
+Mozillas
+policyer
+och
+kan
+inte
+installeras
 .
 <
 /
@@ -5717,6 +5844,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Se
+detaljer
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5773,6 +5935,138 @@ kerhets
 -
 eller
 stabilitetsproblem
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Det
+h
+r
+till
+gget
+bryter
+mot
+Mozillas
+policyer
+och
+har
+inaktiverats
+.
+Du
+kan
+aktivera
+det
+men
+det
+kan
+vara
+riskabelt
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Detta
+till
+gg
+bryter
+mot
+Mozillas
+policyer
+.
+Att
+anv
+nda
+det
+kan
+vara
+riskabelt
 .
 <
 /
