--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-cy/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-cy/strings.xml
@@ -4232,13 +4232,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4292,6 +4308,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4311,6 +4343,39 @@ yr
 estyniad
 hwn
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Methu
+gosod
+estyniad
 <
 /
 string
@@ -4698,6 +4763,67 @@ ar
 y
 platfform
 hwn
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+Mae
+%
+1
+s
+yn
+torri
+polis
+au
+Mozilla
+ac
+nid
+oes
+modd
+ei
+osod
 .
 <
 /
@@ -5735,6 +5861,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Gweld
+manylion
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5790,6 +5951,147 @@ problemau
 diogelwch
 neu
 sefydlogrwydd
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Mae
+\
+'
+r
+estyniad
+hwn
+yn
+torri
+polis
+au
+Mozilla
+ac
+mae
+wedi
+\
+'
+i
+analluogi
+.
+Gallwch
+ei
+alluogi
+ond
+gall
+hyn
+fod
+yn
+beryglus
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Mae
+\
+'
+r
+estyniad
+hwn
+yn
+torri
+polis
+au
+Mozilla
+.
+Gall
+fod
+yn
+beryglus
+ei
+ddefnyddio
 .
 <
 /
