--- a/testing/web-platform/tests/fledge/tentative/TODO
+++ b/testing/web-platform/tests/fledge/tentative/TODO
@@ -1001,3 +1001,75 @@ k
 anonymity
 enforcement
 .
+*
+Test
+that
+service
+workers
+cannot
+see
+update
+urls
+.
+*
+This
+was
+attempted
+in
+[
+here
+]
+(
+https
+:
+/
+/
+chromium
+-
+review
+.
+googlesource
+.
+com
+/
+c
+/
+chromium
+/
+src
+/
++
+/
+5512083
+)
+but
+needed
+to
+be
+reverted
+because
+it
+kept
+timing
+out
+[
+see
+here
+]
+(
+https
+:
+/
+/
+g
+-
+issues
+.
+chromium
+.
+org
+/
+issues
+/
+339048485
+)
